# ocp-diag-ctam

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  ctam.code-workspace  pip-requirements.txt  pyproject.toml  release-notes.txt
build_scripts/: build_script.sh
ctam/: ctam.py  test_hierarchy.py  test_runner.py  version.py
ctam/interfaces/: comptool_dut.py  functional_ifc.py  fw_update_ifc.py  health_check_ifc.py  ras_ifc.py  telemetry_ifc.py  uri_builder.py
ctam/tests/: test_case.py  test_group.py
ctam/tests/fw_update/basic_fw_update_group/: basic_fw_update_group.py  ctam_test_full_device_update.py  ctam_test_full_device_update_in_loop.py  ctam_test_full_device_update_ping_pong.py  ctam_test_full_device_update_rollback.py  ctam_test_full_device_update_with_older_version.py  ctam_test_install_same_image_two_times.py  ctam_test_negative_corrupt_image_update.py  ctam_test_negative_invalid_signed_image_update.py  (+6 more)
ctam/tests/manual_override/: manual_override_test_group.py
ctam/tests/ras/: basic_ras_test_group.py  ctam_test_collect_crashdump_manager.py  ctam_test_collect_crashdump_oem_selftest.py  ctam_test_discover_crashdump.py
ctam/tests/telemetry/: ctam_test_redfish_service_validator.py
ctam/utils/: ctam_utils.py  fwpkg_utils.py  json_utils.py  logger_utils.py  ssh_tunnel_utils.py
docs/: CTAM - OnBoarding Document.docx  CTAM Internal Testing Feature.docx
docs/source/: conf.py  index.rst
docs/source/arch/: index.rst
docs/source/usage/: index.rst
json_spec/input/: .netrc  FirmwareInventory.json  dut_info.json  gpu_pldm_pkg_info.json  package_info.json  redfish_response.json  redfish_response_messages.json  redfish_uri_config.json  test_runner.json  uri_response_validation.xlsx
json_spec/output/: commands.json  gpu_fw_config.json  log.json  test_case_list.json
(+106 files in other folders)
