[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocptv-ctam"
version = "0.0.1"
description = "Compliance Tool for Accelerator Management"
readme = "README.md"
authors = [
    { name = "OCP Test & Validation", email = "ocp-test-validation@OCP-All.groups.io" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
]
keywords = ["ocp", "ocptv", "accelerator", "compliance"]
dependencies = [
    "ocptv",
    "prettytable",
    "redfish",
    "requests",
    "requests-ntlm",
    "requests-toolbelt",
    "requests-unixsocket",
    "alive_progress>=3.1.4",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort"]

[project.urls]
"Homepage" = "https://github.com/opencomputeproject/ocp-diag-ctam"
"Bug reports" = "https://github.com/opencomputeproject/ocp-diag-ctam/issues"
"Source" = "https://github.com/opencomputeproject/ocp-diag-ctam"

[project.scripts]
ocptv_ctam = "ocptv_ctam.ctam:main"

[tool.setuptools]
packages = ["ocptv_ctam"]

[tool.setuptools.package-dir]
ocptv_ctam = "ctam"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^current_version = "{version}"', '^version = "{version}"']
"ctam/__init__.py" = ['^__version__ = "{version}"']

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
